Update title and add navigation buttons in index.html

--- a/index.html
+++ b/index.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shrimper</title>
+    <title>Lithium</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
-    text
+    <div class="topbar">
+    <a href="index.html" class="logo-container">
+        <img src="favicon.ico" alt="Lithium Logo" class="logo">
+        <p class="logo-text">Lithium</p>
+    </a>
+
+    <button class="button">Home</button>
+    <button class="button">About</button>
+    <button class="button">Contact</button>
+</div>
+
+    <p class="centeredtext">Lithium - The Fast and Reliable Tool</p>
 </body>
 </html>
