--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lithium</title>
+    <title>Lithium - Home</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
@@ -14,9 +14,9 @@
         <p class="logo-text">Lithium</p>
     </a>
 
-    <button class="button">Home</button>
-    <button class="button">About</button>
-    <button class="button">Contact</button>
+    <a href="index.html" class="button">Home</a>
+    <a href="about.html" class="button">About</a>
+    <a href="#" class="button">Discord Server</a>
 </div>
 
     <p class="centeredtext">Lithium - The Fast and Reliable Tool</p>
