--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <a href="index.html" class="button">Home</a>
     <a href="about.html" class="button">About</a>
-    <a href="#" class="button">Discord Server</a>
+    <a href="https://discord.gg/mGG4mHXKUU" class="button">Discord Server</a>
 </div>
 
     <p class="centeredtext">Lithium - The Fast and Reliable Tool</p>
