--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
 
     <a href="index.html" class="button">Home</a>
     <a href="about.html" class="button">About</a>
-    <a href="#" class="button">Discord Server</a>
+    <a href="https://discord.gg/mGG4mHXKUU" class="button">Discord Server</a>
 </div>
 
     <div class="about-container">
@@ -39,4 +39,5 @@
         <p class="about-description">Lithium is named after the chemical element lithium, which is known for its light weight and high energy density. We wanted to create a tool that is lightweight and powerful, just like the element.</p>
     </div>
 </body>
+
 </html>
