Enhance index.html with premium tool and payment info
Updated the content and structure of the index.html file to include premium tool details, payment options, and trial information.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,37 @@
     <a href="https://discord.gg/mGG4mHXKUU" class="button">Discord Server</a>
 </div>
 
-    <p class="centeredtext">Lithium - The Fast and Reliable Tool</p>
+    <div class="centered">
+        <p class="centeredtext">Lithium - The Premium tool For Roblox</p>
+        <p class="centeredtext2">Lithium, the roblox tool designed to enhance your gaming experience with fast execution and support for most scripts.</p>
+    </div>
+
+    <div class="purchase-container">
+    <div class="payment-grid">
+
+        <div class="payment-box">
+            <div class="payment-price">15€</div>
+            <div class="payment-duration">The key will last for a month.</div>
+            <button class="submit-button">Purchase</button>
+        </div>
+
+        <div class="payment-box">
+            <div class="payment-price">5€</div>
+            <div class="payment-duration">The key will last for one week.</div>
+            <button class="submit-button">Purchase</button>
+        </div>
+
+        <div class="payment-box">
+            <div class="payment-price">45€</div>
+            <div class="payment-duration">Permanent key, lasts forever.</div>
+            <button class="submit-button">Purchase</button>
+        </div>
+    </div>
+    <p class="trial-info">Want to test before purchasing? You can boost our server for a 24 hours per boost for a trial!</p>
+    <p class="purchases-unavailable">PURCHASES WILL BE AVAILABLE ON RELEASE | Note: Prices are not final and could change.</p>
+</div>
+
+
+    <div class="footer">© 2026 Lithium. All rights reserved. | Need assistance but you don't have discord? Contact us at support@shrimper.dev</div>
 </body>
 </html>
