Add footer to about.html
Added footer with copyright information and support contact.

--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
         <p class="about-description">How many sUNC does Lithium have?</p>
         <p class="about-description">I have honestly no idea dude ts is still in development</p>
         <p class="about-description">Is this executor free?</p>
-        <p class="about-description">No, this executor is not free, it will cost 15€/4000 Robux for monthly, 5€/1250 Robux for weekly, 60€ for lifetime (no robux payment for this)!</p>
+        <p class="about-description">No, this executor is not free, it will cost 15€/4000 Robux for monthly, 5€/1250 Robux for weekly, 45€ for lifetime (no robux payment for this)!</p>
         <p class="about-description">Is there a trial version?</p>
         <p class="about-description">Yes, you can get a 24 hours trial via boosting our discord server (48 hours if you boost twice)! This is so you can test it out before purchasing!</p>
         <p class="about-description">Can I gift a key to someone?</p>
@@ -38,6 +38,7 @@
         <p class="about-description">How did you get the idea for the name?</p>
         <p class="about-description">Lithium is named after the chemical element lithium, which is known for its light weight and high energy density. We wanted to create a tool that is lightweight and powerful, just like the element.</p>
     </div>
-</body>
 
+    <div class="footer">© 2026 Lithium. All rights reserved. | Need assistance and you don't have discord? Contact us at support@shrimper.dev</div>
+</body>
 </html>
