--- a/index.html
+++ b/index.html
@@ -25,25 +25,10 @@
     </div>
 
     <div class="purchase-container">
-    <div class="payment-grid">
-
-        <div class="payment-box">
-            <div class="payment-price">15€</div>
-            <div class="payment-duration">The key will last for a month.</div>
-            <button class="submit-button">Purchase</button>
-        </div>
-
-        <div class="payment-box">
-            <div class="payment-price">5€</div>
-            <div class="payment-duration">The key will last for one week.</div>
-            <button class="submit-button">Purchase</button>
-        </div>
-
-        <div class="payment-box">
-            <div class="payment-price">45€</div>
-            <div class="payment-duration">Permanent key, lasts forever.</div>
-            <button class="submit-button">Purchase</button>
-        </div>
+    <div class="buttons-container">
+        <a href="https://discord.gg/mGG4mHXKUU" class="centerbutton">Purchase</a>
+        <a href="about.html" class="centerbutton">About</a>
+        <a href="https://discord.gg/mGG4mHXKUU" class="centerbutton">Discord Server</a>
     </div>
     <p class="trial-info">Want to test before purchasing? You can boost our server for a 24 hours per boost for a trial!</p>
     <p class="purchases-unavailable">PURCHASES WILL BE AVAILABLE ON RELEASE | Note: Prices are not final and could change.</p>
@@ -52,4 +37,5 @@
 
     <div class="footer">© 2026 Lithium. All rights reserved. | Need assistance but you don't have discord? Contact us at support@shrimper.dev</div>
 </body>
+<script src="./oneko.js"></script>
 </html>
