doesnt even exist btw

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <div class="centered">
         <p class="centeredtext">Lithium - The Premium tool For Roblox</p>
-        <p class="centeredtext2">Lithium, the roblox tool designed to enhance your gaming experience with fast execution and support for most scripts.</p>
+        <p class="centeredtext2">Lithium, the roblox tool designed to enhance your gaming experience with fast execution and support for most scripts. (doesnt even exist yet btw)</p>
     </div>
 
     <div class="purchase-container">
