--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 <body>
     <div class="topbar">
     <a href="index.html" class="logo-container">
-        <img src="favicon.ico" alt="Lithium Logo" class="logo">
+        <img src="favicon.ico" draggable="false" alt="Lithium Logo" class="logo">
         <p class="logo-text">Lithium</p>
     </a>
 
