--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="topbar">
     <a href="index.html" class="logo-container">
-        <img src="favicon.ico" alt="Lithium Logo" class="logo">
+        <img src="favicon.ico" draggable="false" alt="Lithium Logo" class="logo">
         <p class="logo-text">Lithium</p>
     </a>
 
@@ -22,6 +22,7 @@
     <div class="centered">
         <p class="centeredtext">Lithium - The Premium tool For Roblox</p>
         <p class="centeredtext2">Lithium, the roblox tool designed to enhance your gaming experience with fast execution and support for most scripts. (doesnt even exist yet btw)</p>
+        <img class="preview" draggable="false" src="/images/Lithium Preview.png"></img>
     </div>
 
     <div class="purchase-container">
