--- a/embed-test.html
+++ b/embed-test.html
@@ -6,12 +6,12 @@
     <meta name="theme-color" content="#394c5f">
 
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Lithium | Roblox Tool">
+    <meta property="og:title" content="Lithium | Premium Tool For Roblox">
     <meta property="og:description" content="Fast execution and high performance for your scripts.">
     <meta property="og:image" content="https://shrimper.dev/images/Lithium%20Preview.png">
 
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Lithium | Roblox Tool">
+    <meta name="twitter:title" content="Lithium | Premium Tool For Roblox">
     <meta name="twitter:description" content="Fast execution and high performance for your scripts.">
     <meta name="twitter:image" content="https://shrimper.dev/images/Lithium%20Preview.png">
 </head>
