--- a/about.html
+++ b/about.html
@@ -3,6 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Lithium is a roblox tool designed to enhance your gaming experience with our fast execution and support for most of your scripts that can help you gain more performance!">
+    <meta name="theme-color" content="#394c5f">
+
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Lithium | Premium Tool For Roblox">
+    <meta property="og:description" content="Fast execution and high performance for your scripts.">
+    <meta property="og:image" content="https://shrimper.dev/images/Lithium%20Preview.png">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Lithium | Premium Tool For Roblox">
+    <meta name="twitter:description" content="Fast execution and high performance for your scripts.">
+    <meta name="twitter:image" content="https://shrimper.dev/images/Lithium%20Preview.png">
+
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lithium - About</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
