--- a/index.html
+++ b/index.html
@@ -35,23 +35,25 @@
 </div>
 
     <div class="centered">
-        <p class="centeredtext">Lithium - The Premium tool For Roblox</p>
-        <p class="centeredtext2">Lithium, the roblox tool designed to enhance your gaming experience with fast execution and support for most scripts. (doesnt even exist yet btw)</p>
-        <img class="preview" draggable="false" src="/images/Lithium Preview.png"></img>
+        <p class="centeredtext fade-in-up">Lithium - The Premium tool For Roblox</p>
+        <p class="centeredtext2 fade-in-up delay-1">Lithium, the roblox tool designed to enhance your gaming experience with fast execution and support for most scripts. (doesnt even exist yet btw)</p>
+        <div class="preview-container fade-in-up delay-2">
+            <img class="preview" draggable="false" src="/images/Lithium Preview.png" alt="Lithium Preview">
+        </div>
     </div>
 
-    <div class="purchase-container">
+    <div class="purchase-container fade-in">
     <div class="buttons-container">
-        <a href="https://discord.gg/mGG4mHXKUU" class="centerbutton">Purchase</a>
-        <a href="about.html" class="centerbutton">About</a>
-        <a href="https://discord.gg/mGG4mHXKUU" class="centerbutton">Discord Server</a>
+        <a href="https://discord.gg/mGG4mHXKUU" class="centerbutton slide-in delay-3">Purchase</a>
+        <a href="about.html" class="centerbutton slide-in delay-4">About</a>
+        <a href="https://discord.gg/mGG4mHXKUU" class="centerbutton slide-in delay-5">Discord Server</a>
     </div>
-    <p class="trial-info">Want to test before purchasing? You can boost our server for a 24 hours per boost for a trial!</p>
-    <p class="purchases-unavailable">PURCHASES WILL BE AVAILABLE ON RELEASE | Note: Prices are not final and could change.</p>
+    <p class="trial-info fade-in delay-6">Want to test before purchasing? You can boost our server for a 24 hours per boost for a trial!</p>
+    <p class="purchases-unavailable fade-in delay-7">PURCHASES WILL BE AVAILABLE ON RELEASE | Note: Prices are not final and could change.</p>
 </div>
 
 
-    <div class="footer">© 2026 Lithium. All rights reserved. | Need assistance but you don't have discord? Contact us at support@shrimper.dev</div>
+    <div class="footer fade-in">© 2026 Lithium. All rights reserved. | Need assistance but you don't have discord? Contact us at support@shrimper.dev</div>
 </body>
 <script src="./oneko.js"></script>
 </html>
