--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 </div>
 
 
-    <div class="footer fade-in">© 2026 Lithium. All rights reserved. | Need assistance but you don't have discord? Contact us at support@shrimper.dev</div>
+    <div class="footer fade-in">© 2026 Lithium. All rights reserved. | Need assistance but you don't have discord? Contact us at support@shrimper.dev | I am aware about the issue where on phone, the topbar is bugged</div>
 </body>
 <script src="./oneko.js"></script>
 </html>
