--- a/about.html
+++ b/about.html
@@ -68,7 +68,8 @@
         </div>
     </div>
 
-    <div class="footer fade-in">© 2026 Lithium. All rights reserved. | Need assistance and you don't have discord? Contact us at support@shrimper.dev</div>
+    <div class="footer fade-in">© 2026 Lithium. All rights reserved. | Need assistance but you don't have discord? Contact us at support@shrimper.dev | I am aware about the issue where on phone, the topbar is bugged</div>
 </body>
 <script src="./oneko.js"></script>
+
 </html>
